feat: -prometheus config in docker-compose -graphana config in docker-compose
-based logic to metrics query:
 -collectDatabaseMetric  method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,23 @@ spring.datasource.username=postgres
 spring.datasource.password=Postgres01
 
 
-  spring.jpa.hibernate.ddl-auto=none
-  spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-  spring.jpa.properties.hibernate.format_sql=true
-  spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+
+# Enable Prometheus export
+management.endpoints.web.exposure.include=health,prometheus
+management.prometheus.metrics.export.enabled=true
+
+# Enable percentiles histograms for HTTP server requests
+management.metrics.distribution.percentiles-histogram[http.server.requests]=true
+
+
+
+# Enable percentiles histograms for JDBC metrics
+management.metrics.distribution.percentiles-histogram[hibernate.query]=true
+management.metrics.distribution.percentiles-histogram[hibernate.statements]=true
+management.metrics.distribution.percentiles-histogram[jdbc.connections]=true
+management.metrics.distribution.percentiles-histogram[jdbc.statements]=true
+management.metrics.distribution.percentiles-histogram[jdbc.transactions]=true
