--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,33 @@
 version: '3.7'
 
 services:
+
+  prometheus:
+    image: prom/prometheus:v2.42.0
+    ports:
+      - 9090:9090
+    volumes:
+      - ./prometheus/:/etc/prometheus/
+      - prometheus-data:/prometheus
+
+#    networks:
+#      - local
+
+
+
+  grafana:
+    image: grafana/grafana:9.3.6
+    ports:
+      - 3000:3000
+    depends_on:
+      - prometheus
+#    networks:
+#      - internal
+    volumes:
+      - grafana-storage:/var/lib/grafana
+
+
+
   postgres:
     image: 'postgres:16.2'
     environment:
@@ -25,6 +52,10 @@ services:
           cpus: '2.0'
           memory: 2G
 
+
+
 volumes:
   postgres_data:
   postgres_logs:
+  prometheus-data:
+  grafana-storage:
