feat: REST for DEBUG

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
 # Enable Prometheus export
+management.endpoints.web.base-path=/actuator
 management.endpoints.web.exposure.include=health,prometheus
 management.prometheus.metrics.export.enabled=true
 
@@ -25,3 +26,6 @@ management.metrics.distribution.percentiles-histogram[hibernate.statements]=true
 management.metrics.distribution.percentiles-histogram[jdbc.connections]=true
 management.metrics.distribution.percentiles-histogram[jdbc.statements]=true
 management.metrics.distribution.percentiles-histogram[jdbc.transactions]=true
+
+#Logging
+logging.level.root=DEBUG
