--- a/compose.yaml
+++ b/compose.yaml
@@ -10,10 +10,6 @@ services:
       - ./prometheus/:/etc/prometheus/
       - prometheus-data:/prometheus
 
-#    networks:
-#      - local
-
-
 
   grafana:
     image: grafana/grafana:9.3.6
@@ -21,10 +17,16 @@ services:
       - 3000:3000
     depends_on:
       - prometheus
-#    networks:
-#      - internal
+
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
     volumes:
       - grafana-storage:/var/lib/grafana
+#    networks:
+#      monitoring:
+#        aliases:
+#          - grafana
 
 
 
