--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -2,12 +2,19 @@ global:
   scrape_interval: 20s
 
 scrape_configs:
+  - job_name: 'sample_monitoring'
+    scrape_interval: 5s
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: [ 'localhost:8080' ]
+#      - targets: [ 'host.docker.internal:8080' ]
+
   -  job_name: 'prometheus'
      scrape_interval: 5s
      static_configs:
        - targets: ['localhost:9090','localhost:9100']
-  - job_name: 'postgresql'
-    scrape_interval: 5s
-    static_configs:
-      - targets: ['localhost:8080']
-#      - targets: ['localhost:5433']
+#  - job_name: 'spring-actuator'
+#    scrape_interval: 5s
+#    static_configs:
+#      - targets: ['localhost:8080']
+#    metrics_path: '/actuator/prometheus'
