--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=demo-prometheus
 
 
 spring.datasource.url=jdbc:postgresql://localhost:5433/aia_perf1
@@ -14,11 +15,14 @@ spring.jpa.show-sql=true
 management.endpoints.web.base-path=/actuator
 management.endpoints.web.exposure.include=health,prometheus
 management.prometheus.metrics.export.enabled=true
+management.metrics.tags.application=${spring.application.name}
+management.metrics.tags.environment=local
 
-# Enable percentiles histograms for HTTP server requests
-management.metrics.distribution.percentiles-histogram[http.server.requests]=true
+# histogram & percentiles - "_bucket" prefix in the metric name
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
 
-
+# Tomcat metrics
+server.tomcat.mbeanregistry.enabled=true
 
 # Enable percentiles histograms for JDBC metrics
 management.metrics.distribution.percentiles-histogram[hibernate.query]=true
@@ -29,3 +33,4 @@ management.metrics.distribution.percentiles-histogram[jdbc.transactions]=true
 
 #Logging
 logging.level.root=DEBUG
+#logging.level.root=INFO
