--- a/script/config/prometheus.yml
+++ b/script/config/prometheus.yml
@@ -1,5 +1,5 @@
 global:
-  scrape_interval: 20s
+  scrape_interval: 15s
 
 scrape_configs:
 #  -  job_name: 'prometheus'
@@ -12,4 +12,15 @@ scrape_configs:
     static_configs:
       - targets: ['host.docker.internal:8080']
 #      - targets: ['localhost:8080']
+  - job_name: 'node-exporter'
+    scrape_interval: 5s
+    static_configs:
+      - targets:
+          - node-exporter:9100
 
+#  - job_name: 'postgresql'
+#    scrape_interval: 5s
+#    static_configs:
+#      - targets: ['localhost:9187']
+
+          #default postgres importer port
