--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,19 @@ spring.application.name=demo-prometheus
 spring.datasource.url=jdbc:postgresql://localhost:5432/aia_perf1
 spring.datasource.username=postgres
 spring.datasource.password=Postgres01
+db.pool.size=30
 
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+
+#JDBC experemental
+spring.data.jdbc.repositories.enabled=true
+spring.data.jdbc.dialect=postgresql
+logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
 
 # Enable Prometheus export
 management.endpoints.web.base-path=/actuator
