--- a/script/config/prometheus.yml
+++ b/script/config/prometheus.yml
@@ -1,5 +1,6 @@
 global:
   scrape_interval: 15s
+  evaluation_interval: 15s
 
 scrape_configs:
 #  -  job_name: 'prometheus'
@@ -18,9 +19,17 @@ scrape_configs:
       - targets:
           - node-exporter:9100
 
-#  - job_name: 'postgresql'
-#    scrape_interval: 5s
-#    static_configs:
+  - job_name: 'postgresql'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['postgres-exporter:9187']
 #      - targets: ['localhost:9187']
+#          default postgres importer port
 
-          #default postgres importer port
+
+# Alertmanager configuration
+alerting:
+  alertmanagers:
+    - static_configs:
+        - targets:
+
