--- a/script/docker-compose.yaml
+++ b/script/docker-compose.yaml
@@ -39,7 +39,8 @@ services:
     image: quay.io/prometheuscommunity/postgres-exporter
     container_name: postgres-exporter
     environment:
-      DATA_SOURCE_NAME: "postgresql://postgres:postgres@postgres:5432/postgres?sslmode=disable"
+      DATA_SOURCE_NAME: "postgresql://postgres:Postgres1@postgres:5432/aia_perf1?sslmode=disable"
+#      DATA_SOURCE_NAME: "postgresql://postgres:Postgres1@postgres:5432/postgres?sslmode=disable"
       PG_EXPORTER_EXTEND_QUERY_PATH: "/queries/queries.yaml"
       PG_EXPORTER_AUTO_DISCOVER_DATABASES: "true"
       PG_EXPORTER_EXCLUDE_DATABASES: "template0,template1"
@@ -77,6 +78,8 @@ services:
       -c log_filename=postgresql-%Y-%m-%d_%H%M%S.log
       -c log_min_error_statement=error
       -c log_autovacuum_min_duration=0
+    networks:
+      - monitoring
     deploy:
       resources:
         limits:
