refactor: necessary functionality remains.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=demo-prometheus
 spring.datasource.url=jdbc:postgresql://localhost:5432/aia_perf1
 spring.datasource.username=postgres
 spring.datasource.password=Postgres01
-db.pool.size=30
+
 
 
 spring.jpa.hibernate.ddl-auto=none
@@ -39,5 +39,5 @@ management.metrics.distribution.percentiles-histogram[jdbc.statements]=true
 management.metrics.distribution.percentiles-histogram[jdbc.transactions]=true
 
 #Logging
-logging.level.root=DEBUG
-#logging.level.root=INFO
+#logging.level.root=DEBUG
+logging.level.root=INFO
