feat: meterRegistry.gauge

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,7 @@ management.prometheus.metrics.export.enabled=true
 management.metrics.tags.application=${spring.application.name}
 management.metrics.tags.environment=local
 
+
 # histogram & percentiles - "_bucket" prefix in the metric name
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
 
@@ -39,5 +40,5 @@ management.metrics.distribution.percentiles-histogram[jdbc.statements]=true
 management.metrics.distribution.percentiles-histogram[jdbc.transactions]=true
 
 #Logging
-#logging.level.root=DEBUG
-logging.level.root=INFO
+logging.level.root=DEBUG
+#logging.level.root=INFO
