refactor: removed commented code, redundant dependencies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/aia_perf1
 spring.datasource.username=postgres
 spring.datasource.password=Postgres01
 
-
+alert.app.url=http://localhost:8081
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -40,5 +40,5 @@ management.metrics.distribution.percentiles-histogram[jdbc.statements]=true
 management.metrics.distribution.percentiles-histogram[jdbc.transactions]=true
 
 #Logging
-logging.level.root=DEBUG
-#logging.level.root=INFO
+#logging.level.root=DEBUG
+logging.level.root=INFO
