--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,8 +45,10 @@ services:
       -c log_filename=postgresql-%Y-%m-%d_%H%M%S.log
       -c log_min_error_statement=error
       -c log_autovacuum_min_duration=0
+      -c shared_preload_libraries='timescaledb'
       -c shared_preload_libraries='pg_stat_statements'
       -c pg_stat_statements.track=all
+#      -c shared_preload_libraries='timescaledb'
     networks:
       - monitoring
     deploy:
